# MNIST

./: .gitignore  CMakeLists.txt  README.md
dataset/: README.md
include/: mlp.h  mnist.h  vec2df.h
results/models/model_10-26-1733/: model_10-26-1733.xml
results/models/model_10-31-1339/: README.md  model_10-31-1339.pth
results/models/model_11-1-1820/: README.md  model_11-1-1820.pth
results/models/model_12-5-1759/: README.md  model_12-5-1759.xml
scripts/: build.sh  confusion.py  graph.py  graph_losses.py  run.sh
src/: CMakeLists.txt  main.cpp  mlp.cpp  mnist.cpp  mnist_mlp.py  mnist_models.py  vec2df.cpp
tests/: CMakeLists.txt  cblas-test.cpp  helper.ipynb  mlp-test.cpp  mlp_test.cpp  mlp_test_helper.ipynb  mnist-read-test.cpp  opencv-test.cpp  vec2df_test.cpp
